--- a/backend/package.json
+++ b/backend/package.json
@@ -11,13 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
     "lodash": "^4.17.21",
+    "mongodb": "^4.1.3",
     "morgan": "^1.10.0",
-    "simple-json-db": "^1.2.3",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
