--- a/backend/package.json
+++ b/backend/package.json
@@ -6,18 +6,19 @@
   "scripts": {
     "start": "node index",
     "watch": "nodemon index",
+    "dynamo": "node dynamo-db",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.38.0",
     "@aws-sdk/client-s3": "^3.32.0",
     "@aws-sdk/node-http-handler": "^3.32.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
     "lodash": "^4.17.21",
-    "mongodb": "^4.1.3",
     "morgan": "^1.10.0",
     "uuid": "^8.3.2"
   },
