--- a/nginx.conf
+++ b/nginx.conf
@@ -36,6 +36,7 @@ http {
     include /etc/nginx/conf.d/*.conf;
 
     server {
+        client_max_body_size 5M;
         listen       80;
         listen       [::]:80;
         server_name  _;
